# adaptive_light

./: .gitignore  .gitmodules
Hardware/Controller/: Battery.kicad_sch  CAN_bus.kicad_sch  Controller.kicad_pcb  Controller.kicad_prl  Controller.kicad_pro  Controller.kicad_sch  LED_module_v2.csv  Microcontroller.kicad_sch  USBC.kicad_sch  _autosave-Controller.kicad_pcb  calculate.ipynb  controller_module_v1.csv  fp-info-cache  symbols.bak  symbols.kicad_sym  ~Controller.kicad_sch.lck
Hardware/Controller/DC-DC-bodge/: DC-DC-bodge.kicad_pcb  DC-DC-bodge.kicad_prl  DC-DC-bodge.kicad_pro  DC-DC-bodge.kicad_sch
Hardware/Controller/bom/: ibom.html
Hardware/Controller/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
Hardware/LED_Module/: #auto_saved_files#  CAN_bus.kicad_sch  LED_Module.kicad_pcb  LED_Module.kicad_prl  LED_Module.kicad_pro  LED_Module.kicad_sch  LED_Module.kicad_sch-bak  LED_driver.kicad_sch  LED_driver.kicad_sch-bak  LED_module_v2.csv  LED_modulke_v1  Microcontroller.kicad_sch  Power.kicad_sch  Sensors.kicad_sch  _autosave-Power.kicad_sch  calculations.ipynb  fp-info-cache  symbols.bak  symbols.kicad_sym
Hardware/LED_Module/bom/: ibom.html
Hardware/LED_Module/footprints.pretty/: JE2835_Amber.kicad_mod  (+4 more)
Hardware/UserInterface/: CAN_Bus+power.kicad_sch  Microcontroller.kicad_sch  UserInterface.kicad_pcb  UserInterface.kicad_prl  UserInterface.kicad_pro  UserInterface.kicad_sch  UserInterface_v2.csv  fp-info-cache
Software/Controller/: CMakeLists.txt  boardcfg.h  common.c  common.h  light_strength_control.c  light_strength_control.h  main.c  typedefs.h
Software/LED_Module/: CMakeLists.txt  boardcfg.h  main.c  main_LED_module.c  main_LED_module.h  sensors.c  sensors.h
Software/LED_Module/lib/CAN/: CAN.c  CMakeLists.txt
Software/User-Interface/: CMakeLists.txt  boardcfg.h  main.c
Software/User-Interface/lib/CAN/: CAN.c  CAN.h  mcp_interface.c
(+12 files in other folders)
